--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,7 +47,7 @@
 :root {
   --primary-color: #7b4a9c;
   --secondary-color: rgb(22 121 178);
-  --orange: #0395e8;
+  --orange: rgb(248 164 92);
   --blue: rgb(5 79 138);
 }
 
