--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
   font-family: "Opensans-bold";
   src: url("../../public/fonts/OPENSANS-BOLD_1.TTF");
 }
+
 @font-face {
   font-family: "Opensans-bold-italic";
   src: url("../../public/fonts/OPENSANS-BOLDITALIC_1.TTF");
@@ -145,6 +146,16 @@ button {
   width: 100%;
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.for-tenant-slider {
+  height: calc(100vh - 70px);
+}
+
+@media screen and (max-width: 767px) {
+  .for-tenant-slider {
+    height: auto;
+  }
 }
 
 #__next {
