--- a/src/css/main.css
+++ b/src/css/main.css
@@ -59,6 +59,10 @@
 .css-uy858d-Slider {
   border: 2px solid var(--primary-color);
 }
+.sc-htoDjs .jWpUJH{
+  position: absolute;
+  bottom: -35px;
+}
 
 input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
