--- a/src/css/main.css
+++ b/src/css/main.css
@@ -174,11 +174,111 @@ button {
   opacity: .5;
 }
 
+.banner {
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../public/theme/images/banner.jpg');
+  min-height: 90vh;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top;
+}
+
+.count-item {
+  position: relative;
+  overflow: hidden;
+  background: #fff;
+  width: calc(100% / 4 - 20px);
+  height: 210px;
+}
+
+.logo {
+  filter: brightness(0) invert(1);
+}
+
+.logo:hover {
+  filter: brightness(1) invert(0);
+}
+
+.count-item::before {
+  position: absolute;
+  content: '';
+  width: 146%;
+  height: 100%;
+  top: 33%;
+  left: -141px;
+  background: #fbf7ee;
+  transform: rotate(43deg);
+  z-index: -1;
+}
+.count-item:hover {
+  background-color: #f7a420;
+}
+.count-item img{
+  height: 50px;
+  object-fit: contain;
+}
+.count-item:hover img {
+  filter: invert(1) brightness(100);
+}
+.count-item:hover::before {
+  background-color: #fbba52;
+}
+
+
 @media screen and (max-width: 767px) {
   .for-tenant-slider {
     height: auto;
   }
 }
+
+.pitem .image {
+  transition: all .3s linear;
+}
+
+.pitem:hover .image{
+  transform: scale(1.2) translateY(-1rem);
+}
+
+.sc-bdVaJa:first-child {
+  position: absolute;
+  top: -85px;
+  right: 45px;
+}
+.sc-bdVaJa:first-child span {
+  background-color: #f7a420!important;
+}
+.bhRnqO::before, .kVtMtA::before{
+  border-top-color: #fff!important;
+  border-right-color: #fff !important;
+}
+
+.sc-bdVaJa:last-child{
+  position: absolute;
+  top: -85px;
+  right: -5px;
+}
+.sc-bdVaJa:last-child span {
+  background-color: #0081e7 !important;
+}
+
+
+.register-sec {
+  margin-top: 50px;
+  height: 230px;
+  background-repeat: no-repeat;
+  background-image: url('/theme/images/small-banner.png');
+  background-size: contain;
+  background-position: right;
+  background-color: #b0b4b7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+
+
 
 #__next {
   width: 100%;
