--- a/src/css/main.css
+++ b/src/css/main.css
@@ -129,13 +129,14 @@ button {
 /**
  * hide scrollbars
  */
-::-webkit-scrollbar {
-  display: none;
-  width: 0 !important;
-}
+
 .disable-scrollbars {
   scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE 10+ */
+  -ms-overflow-style:none; /* IE 10+ */
+}
+
+.disable-scrollbars::-webkit-scrollbar {
+  width: 0 !important;
 }
 
 .bghjHX,
@@ -301,7 +302,7 @@ button {
 }
 
 body {
-  @apply font-sans antialiased text-sm disable-scrollbars;
+  @apply font-sans antialiased text-sm;
 }
 
 [data-background="light"] {
