--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,7 +49,7 @@
   --primary-color: #7b4a9c;
   --secondary-color: rgb(22 121 178);
   --orange: rgb(248 164 92);
-  --blue: rgb(6 226 209);
+  --blue: #0284c7;
 }
 .text-blueGray-500 {
   --tw-text-opacity: 1;
