filter and changes points

--- a/src/css/layouts/layout-1.css
+++ b/src/css/layouts/layout-1.css
@@ -44,6 +44,10 @@
       .left-sidebar {
         max-width: calc(theme("spacing.1") * 16);
       }
+
+      .section-title {
+        width: calc(100% - 65px);
+      }
     }
   }
 }
