--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,23 +49,34 @@
   --primary-color: #7b4a9c;
   --secondary-color: rgb(22 121 178);
   --orange: rgb(248 164 92);
-  --blue: #0284c7;
+  --blue: #a59782;
 }
+
+#nprogress .bar {
+  background: #fff !important;
+  height: 6px !important;
+  color: #fff !important;
+  z-index: 99999999999999999 !important;
+}
+#nprogress .peg {
+  display: none !important;
+}
+
 .text-blueGray-500 {
   --tw-text-opacity: 1;
   color: rgba(100, 116, 139, var(--tw-text-opacity));
 }
 .hover\:text-lightBlue-600:hover {
   --tw-text-opacity: 1;
-  color: rgba(2, 132, 199, var(--tw-text-opacity));
+  color: #a59782;
 }
 .text-blueGray-700 {
   --tw-text-opacity: 1;
-  color: rgba(51, 65, 85, var(--tw-text-opacity));
+  color: #fff;
 }
 .text-lightBlue-500 {
   --tw-text-opacity: 1;
-  color: rgba(14, 165, 233, var(--tw-text-opacity));
+  color: #a59782;
 }
 .right-section {
   max-width: calc(100% - 16rem);
@@ -90,7 +101,7 @@
 }
 .bg-lightBlue-600 {
   --tw-bg-opacity: 1;
-  background-color: rgba(2, 132, 199, var(--tw-bg-opacity));
+  background-color: #a59782;
 }
 .hover\:text-blueGray-500:hover {
   --tw-text-opacity: 1;
